--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,44 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Node.js 및 npm
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+package-lock.json
+# 또는 yarn 사용 시
+# yarn.lock
+
+# Build 출력
+build/
+dist/
+
+# 환경 변수
+.env
+.env.local
+.env.development
+.env.production
+
+# macOS 관련
+.DS_Store
+
+# Windows 관련
+Thumbs.db
+ehthumbs.db
+
+# IntelliJ IDEA, VS Code 등의 IDE 파일
+.idea/
+.vscode/
+*.iml
+
+# 로그 파일
+*.log
+
+# 테스트 커버리지
+coverage/
+
+# 기타 임시 파일
+*.swp
+*.swo
