--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
